fix(web): Modal dialog adds a none existent scrollbar spacing to backdrop
fixes #65

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -3,3 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* https://github.com/saadeghi/daisyui/issues/3040 */
+html {
+    scrollbar-gutter: auto !important;
+}
